--- a/stevenbriggs/templates/public/users/login.html
+++ b/stevenbriggs/templates/public/users/login.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 {% extends "public/partials/base.html" %} {% block main %}
-
-<h2>This is the main block on the Example page</h2>
-
+<div class="container">
+    {% include "public/users/partials/login_form.html" %}
+</div>
 {% endblock %}
