--- a/stevenbriggs/templates/public/partials/base.html
+++ b/stevenbriggs/templates/public/partials/base.html
@@ -1,22 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <title>{{ title }}</title>
-    {% block styles %} {% endblock %}
-</head>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<title>{{title}}</title>
+		<link
+			rel="icon"
+			type="image/png"
+			href="{{url_for('static', filename='/img/favicon/favicon-32x32.png')}}"
+			sizes="32x32" />
+		<link
+			href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+			rel="stylesheet"
+			integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+			crossorigin="anonymous" />
 
-{% include "public/partials/header.html" %}
+		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+			integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
+			crossorigin="anonymous"
+			referrerpolicy="no-referrer" />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Dosis:wght@200;300;400;500;600;700;800&family=PT+Serif:wght@400;700&display=swap"
+			rel="stylesheet" />
+		<link
+			rel="stylesheet"
+			href="{{url_for('static', filename='css/styles.css')}}" />
+	</head>
 
-{% block scripts %} {% endblock %}
+	{% include "public/partials/header.html" %}
 
-<body>
-<div class="content">
-    <div class="w-75 mx-auto">
-        <main>{% block main %} {% endblock %}</main>
-    </div>
-</div>
-{#{% include "public/partials/footer.html" %}#}
-</body>
+	<body>
+		<div class="content">
+			<main>{% block main %} {% endblock %}</main>
+		</div>
+		{% include "public/partials/footer.html" %}
+
+		<!-- jQuery -->
+		<script
+			src="https://code.jquery.com/jquery-3.6.2.min.js"
+			integrity="sha256-2krYZKh//PcchRtd+H+VyyQoZ/e3EcrkxhM8ycwASPA="
+			crossorigin="anonymous"></script>
+
+		<!-- Bootstrap -->
+		<script
+			src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+			integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+			crossorigin="anonymous"></script>
+
+		<script src="{{url_for('static', filename='/js/utils.js')}}"></script>
+	</body>
 </html>
