--- a/stevenbriggs/templates/public/partials/header.html
+++ b/stevenbriggs/templates/public/partials/header.html
@@ -1,3 +1,45 @@
 <!DOCTYPE html>
 <header class="page-header">
+	<h1 class="main_title">
+		<a href="/" class="navlink name-title" role="menuitem" title="Return Home"
+			>STEVEN BRIGGS</a
+		>
+	</h1>
+	<nav class="main-navigation page-header__item">
+		<ul role="menubar" class="navigation-list">
+			<li role="presentation">
+				<a href="/" class="navlink" role="menuitem" title="Return Home"
+					>Home</a
+				>
+			</li>
+			<li role="presentation">
+				<a
+					href="/project"
+					class="navlink"
+					role="menuitem"
+					title="My Projects"
+					>Projects</a
+				>
+			</li>
+			<li role="presentation">
+				<a
+					href="/about"
+					class="navlink"
+					role="menuitem"
+					aria-label="About Me"
+					title="About Me"
+					>About</a
+				>
+			</li>
+			<li role="presentation">
+				<a
+					href="/contact"
+					class="navlink"
+					role="menuitem"
+					title="Contact Me"
+					>Contact</a
+				>
+			</li>
+		</ul>
+	</nav>
 </header>
