--- a/stevenbriggs/templates/public/partials/footer.html
+++ b/stevenbriggs/templates/public/partials/footer.html
@@ -25,13 +25,13 @@
 		/></a>
 	</section>
 	<p>
-		© Steven Briggs 2024
-{#		<!-- User -->#}
-{#		{% if current_user.is_authenticated %}#}
-{#		<a href="/logout">  | {{current_user.username}} </a>#}
-{#		{% else %}#}
-{#		<a href="/login" title="Login User"> | Admin Login </a>#}
-{#		{% endif %}#}
-{#		<!-- End User -->#}
+		© Steven Briggs 2025
+		<!-- User -->
+		{% if current_user.is_authenticated %}
+		<a href="/logout">  | {{current_user.username}} </a>
+		{% else %}
+		<a href="/login" title="Login User"> | Admin Login </a>
+		{% endif %}
+		<!-- End User -->
 	</p>
 </footer>
