Add tech stack section and improve About page content
Introduced a new technology stack section on the About page with visual icons for key tools and languages. Enhanced About page text for clarity and professionalism, highlighting full-stack experience and career goals. Fixed a minor email casing inconsistency in the Contact page.

--- a/stevenbriggs/templates/public/about.html
+++ b/stevenbriggs/templates/public/about.html
@@ -2,55 +2,63 @@
 {% extends "public/partials/base.html" %} {% block main %}
 
 <main class="about-main centered">
-	<h1>About Me!</h1>
+    <h1>About Me!</h1>
 
-	<p>
-		My name is Steven Briggs, I am 33 years old, currently living in
-		Washington for the past several years after moving from Arizona.
-		<br />
-		Up until now I have been programming as a hobby, I am self-taught in
-		Java and have been using it for the past 5 years.
-		<br />
-		I am currently looking to branch out, extend my skills with other
-		languages and make programming my career!
-	</p>
+    <p>
+        My name is Steven Briggs, and I am a passionate self-taught programmer with several years of experience learning and building projects.
+        <br><br>
+        After moving to Washington from Arizona, I’ve enjoyed diving deeper into my love for technology and programming as a path toward my long-term career goals.
+        <br><br>
+        To that end I recently completed a full-stack web development bootcamp through CareerFoundry!
+    </p>
 
-	<section class="experience">
-		<table class="experience-table table">
-			<thead>
-				<td>Language</td>
-				<td>Experience</td>
-				<td>Level of Expertise</td>
-			</thead>
-			<tbody>
-				<tr>
-					<td>Java</td>
-					<td>5 Years</td>
-					<td>Advanced</td>
-				</tr>
-				<tr>
-					<td>Python</td>
-					<td>1 Year</td>
-					<td>Beginner</td>
-				</tr>
-                <tr>
-					<td>Rust</td>
-					<td>1 Year</td>
-					<td>Beginner</td>
-				</tr>
-				<tr>
-					<td>CSS</td>
-					<td>1 Year</td>
-					<td>Beginner</td>
-				</tr>
-				<tr>
-					<td>HTML</td>
-					<td>1 Year</td>
-					<td>Beginner</td>
-				</tr>
-			</tbody>
-		</table>
-	</section>
+    <p>
+        I specialize in web development, working with modern frameworks, technologies, and tools. Below is a quick overview of the frameworks, languages, and tools I've worked with:
+    </p>
+
+    <!-- Frameworks and Tools Section -->
+    <section class="tech-stack">
+        <h2>Technologies I've Worked With</h2>
+        <div class="tech-grid">
+            <div class="tech-item">
+                <img src="/static/img/svg/java.svg" alt="Java" />
+                <p>Java</p>
+            </div>
+            <div class="tech-item">
+                <img src="/static/img/svg/rust.svg" alt="Rust" />
+                <p>Rust</p>
+            </div>
+            <div class="tech-item">
+                <img src="/static/img/svg/javascript.svg" alt="Java" />
+                <p>JavaScript</p>
+            </div>
+            <div class="tech-item">
+                <img src="/static/img/svg/python.svg" alt="Python" />
+                <p>Python</p>
+            </div>
+            <div class="tech-item">
+                <img src="/static/img/svg/react.svg" alt="React" />
+                <p>React</p>
+            </div>
+            <div class="tech-item">
+                <img src="/static/img/svg/mariadb.svg" alt="MariaDB" />
+                <p>MariaDB</p>
+            </div>
+            <div class="tech-item">
+                <img src="/static/img/svg/mongodb.svg" alt="MongoDB" />
+                <p>MongoDB</p>
+            </div>
+            <div class="tech-item">
+                <img src="/static/img/svg/html.svg" alt="HTML" />
+                <p>HTML</p>
+            </div>
+            <div class="tech-item">
+                <img src="/static/img/svg/css.svg" alt="CSS" />
+                <p>CSS</p>
+            </div>
+        </div>
+        <h3>Plus More! View my Projects to learn more</h3>
+    </section>
 </main>
 
 {% endblock %}
