--- a/stevenbriggs/static/css/styles.css
+++ b/stevenbriggs/static/css/styles.css
@@ -250,6 +250,12 @@ a:hover {
     margin: 0 auto;
 }
 
+.about-main {
+    max-width: 700px;
+    margin: 0 auto;
+    text-align: left;
+}
+
 /* Main || Grids*/
 .grid {
     display: grid;
@@ -542,4 +548,34 @@ a:hover {
 ;
     font-weight: 600;
     color: #333;
+}
+
+.tech-stack {
+    margin: 2rem 0;
+    text-align: center;
+}
+
+.tech-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+    gap: 2rem;
+    margin-top: 1rem;
+}
+
+.tech-item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.tech-item img {
+    width: 80px;
+    height: 80px;
+    margin-bottom: 0.5rem;
+}
+
+.tech-item p {
+    font-size: 1.2rem;
+    margin: 0;
 }
