--- a/stevenbriggs/templates/public/contact.html
+++ b/stevenbriggs/templates/public/contact.html
@@ -7,7 +7,7 @@
 		<p>
 			Email:
 			<a href="mailto:Briggs.Steven369@gmail.com"
-				>Briggs.Steven369@GMail.com</a
+				>Briggs.Steven369@gmail.com</a
 			>
 		</p>
 		<p>
