Refactor models and reorganize project structure
Reorganized models into separate files (`users.py`, `projects.py`, `journals.py`, `db.py`) for better modularity and maintainability. Updated imports and adjusted database interactions across the project to align with the new structure. Improved page alignment by renaming CSS classes. Added an under-construction notice to the Projects page.

--- a/stevenbriggs/templates/public/about.html
+++ b/stevenbriggs/templates/public/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 {% extends "public/partials/base.html" %} {% block main %}
 
-<main class="about-main centered">
+<main class="main-left-aligned centered">
     <h1>About Me!</h1>
 
     <p>
