--- a/stevenbriggs/static/css/styles.css
+++ b/stevenbriggs/static/css/styles.css
@@ -250,7 +250,7 @@ a:hover {
     margin: 0 auto;
 }
 
-.about-main {
+.main-left-aligned {
     max-width: 700px;
     margin: 0 auto;
     text-align: left;
