--- a/stevenbriggs/templates/public/contact.html
+++ b/stevenbriggs/templates/public/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 {% extends "public/partials/base.html" %} {% block main %}
 
-<main class="contact-main centered">
+<main class="main-left-aligned centered">
 	<section>
 		<h1>Contact Me!</h1>
 		<p>
